cppcheck_report.txt
JuicePDM/src/OutputHandler.cpp:164:15: style: The scope of the variable 'analogMean' can be reduced. [variableScope]
        float analogMean = 0.0f;
              ^
JuicePDM/src/SerialComms.cpp:83:18: style: Variable 'chanSize' is assigned a value that is never used. [unreadVariable]
        chanSize = sizeof(Channels) / NUM_CHANNELS;
                 ^
JuicePDM/src/Storage.cpp:361:17: error: Buffer is accessed out of bounds: fileName [bufferAccessOutOfBounds]
        sprintf(fileName, "%04d-%02d-%02d_%02d-%02d-%02d.csv", 2000 + rtc2.getYear(), rtc2.getMonth(), rtc2.getDay(), rtc2.getHours(), rtc2.getMinutes(), rtc2.getSeconds());
                ^
JuicePDM/src/CANComms.cpp:27:0: style: The function 'InitialiseCAN' is never used. [unusedFunction]

^
JuicePDM/src/Display.cpp:38:0: style: The function 'InitialiseDisplay' is never used. [unusedFunction]

^
JuicePDM/src/OutputHandler.cpp:184:0: style: The function 'OutputTimer' is never used. [unusedFunction]

^
JuicePDM/src/CANComms.cpp:44:0: style: The function 'SendCANMessages' is never used. [unusedFunction]

^
JuicePDM/src/Display.cpp:44:0: style: The function 'Test' is never used. [unusedFunction]

^
JuicePDM/src/CANComms.cpp:34:0: style: The function 'canSniff' is never used. [unusedFunction]

^
JuicePDM/src/main.cpp:114:0: style: The function 'loop' is never used. [unusedFunction]

^
JuicePDM/src/main.cpp:56:0: style: The function 'setup' is never used. [unusedFunction]

^
nofile:0:0: information: Cppcheck cannot find all the include files (use --check-config for details) [missingInclude]

